--- a/styles/estilos.css
+++ b/styles/estilos.css
@@ -35,3 +35,10 @@
   background-color: #9F9FAD;
   color: black;
 }
+
+.login {
+  width: 250px;
+  background-color: lightblue;
+  padding: 5px;
+  text-align: center;
+}
